fix: add text behind

--- a/packages/core/src/components/field-wrapper/field-wrapper.scss
+++ b/packages/core/src/components/field-wrapper/field-wrapper.scss
@@ -17,9 +17,21 @@
     align-items: flex-start;
     justify-content: flex-start;
     gap: 0.25rem;
+
+    margin-right: 0.25rem;
   }
 
   .text-icon {
     margin: 0.125rem;
+  }
+}
+
+:host(.text-behind-slotted-element) {
+  flex-direction: row;
+  align-items: flex-start;
+
+  .bottom-text {
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
   }
 }
